{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 45,
  "lineage": "5f2c9d85-c22b-8a8f-c846-ae7596a23d73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Precious_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:560007135118:instance/i-0e6f8d66cfa09d470",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6f8d66cfa09d470",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce3da7b21cfc8386",
            "private_dns": "ip-10-0-0-252.ec2.internal",
            "private_ip": "10.0.0.252",
            "public_ip": "52.90.168.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e130ff73a2a9c5b2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080aacd2f5d59f049",
            "tags": {
              "Name": "Precious-instance-0"
            },
            "tags_all": {
              "Name": "Precious-instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecad5ab5305689ab"
            ]
          },
          "dependencies": [
            "aws_security_group.Precious_SG",
            "aws_subnet.Precious_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:560007135118:instance/i-0dfb2ecace2089e2c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfb2ecace2089e2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e98cd4f69041c2e",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_ip": "10.0.1.125",
            "public_ip": "3.237.99.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d22051f669524afc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f6de5e557d782686",
            "tags": {
              "Name": "Precious-instance-1"
            },
            "tags_all": {
              "Name": "Precious-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ecad5ab5305689ab"
            ]
          },
          "dependencies": [
            "aws_security_group.Precious_SG",
            "aws_subnet.Precious_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Precious_Ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560007135118:internet-gateway/igw-0c471c941593e85f2",
            "id": "igw-0c471c941593e85f2",
            "owner_id": "560007135118",
            "tags": {
              "Name": "Precious-Ig"
            },
            "tags_all": {
              "Name": "Precious-Ig"
            },
            "vpc_id": "vpc-0a45e89365b5c5df0"
          },
          "dependencies": [
            "aws_vpc.Precious_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Precious_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560007135118:route-table/rtb-0f7e16e4dc4126ff4",
            "id": "rtb-0f7e16e4dc4126ff4",
            "owner_id": "560007135118",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c471c941593e85f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Precious-Rt"
            },
            "tags_all": {
              "Name": "Precious-Rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45e89365b5c5df0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Precious_Ig",
            "aws_vpc.Precious_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Precious_RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0818075fb96a1bded",
            "route_table_id": "rtb-0f7e16e4dc4126ff4",
            "subnet_id": "subnet-080aacd2f5d59f049"
          },
          "dependencies": [
            "aws_internet_gateway.Precious_Ig",
            "aws_route_table.Precious_RT",
            "aws_subnet.Precious_subnet",
            "aws_vpc.Precious_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00374e1d34dd74d28",
            "route_table_id": "rtb-0f7e16e4dc4126ff4",
            "subnet_id": "subnet-0f6de5e557d782686"
          },
          "dependencies": [
            "aws_internet_gateway.Precious_Ig",
            "aws_route_table.Precious_RT",
            "aws_subnet.Precious_subnet",
            "aws_vpc.Precious_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Precious_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560007135118:security-group/sg-0ecad5ab5305689ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecad5ab5305689ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH inboud rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH inboud rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH inboud rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Precious-SG",
            "name_prefix": "",
            "owner_id": "560007135118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Precious-SG"
            },
            "tags_all": {
              "Name": "Precious-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a45e89365b5c5df0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Precious_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Precious_igress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "HTTP",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH inboud rule",
            "from_port": 80,
            "id": "sgrule-1439382888",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ecad5ab5305689ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Precious_SG",
            "aws_vpc.Precious_vpc"
          ]
        },
        {
          "index_key": "HTTPS",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH inboud rule",
            "from_port": 443,
            "id": "sgrule-2030339363",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ecad5ab5305689ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Precious_SG",
            "aws_vpc.Precious_vpc"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH inboud rule",
            "from_port": 22,
            "id": "sgrule-3937860123",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ecad5ab5305689ab",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Precious_SG",
            "aws_vpc.Precious_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Precious_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560007135118:subnet/subnet-080aacd2f5d59f049",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080aacd2f5d59f049",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560007135118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Precious-0"
            },
            "tags_all": {
              "Name": "Precious-0"
            },
            "vpc_id": "vpc-0a45e89365b5c5df0"
          },
          "dependencies": [
            "aws_vpc.Precious_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560007135118:subnet/subnet-0f6de5e557d782686",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6de5e557d782686",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "560007135118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Precious-1"
            },
            "tags_all": {
              "Name": "Precious-1"
            },
            "vpc_id": "vpc-0a45e89365b5c5df0"
          },
          "dependencies": [
            "aws_vpc.Precious_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Precious_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:560007135118:vpc/vpc-0a45e89365b5c5df0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0442e22b837920f22",
            "default_route_table_id": "rtb-03802b612555577a7",
            "default_security_group_id": "sg-0606fd4f68bd3b602",
            "dhcp_options_id": "dopt-0fa05f0ff9f87dc1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a45e89365b5c5df0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03802b612555577a7",
            "owner_id": "560007135118",
            "tags": {
              "Name": "Precious-vpc"
            },
            "tags_all": {
              "Name": "Precious-vpc"
            }
          }
        }
      ]
    }
  ]
}